--- a/frontend/src/assets/css/style.css
+++ b/frontend/src/assets/css/style.css
@@ -11305,6 +11305,16 @@ html {
 
 .comment-button {
   max-width: 100px;
+  margin: 0;
+  padding: 0;
+}
+
+.delete-icon {
+  max-width: 30px;
+}
+
+.delete-icon:hover {
+  cursor: pointer;
 }
 
 .error {
