Edit comment - implemented in frontend and backend

--- a/frontend/src/assets/css/style.css
+++ b/frontend/src/assets/css/style.css
@@ -11317,6 +11317,14 @@ html {
   cursor: pointer;
 }
 
+.edit-icon {
+  margin-left: 25px;
+}
+
+.edit-icon:hover {
+  cursor: pointer;
+}
+
 .error {
   margin: 50px;
 }
